--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,10 @@ body {
     align-items: center;
 }
 
+.nav_toggle {
+    display: none;
+}
+
 /*  Logo  */
 
 .logo {
@@ -180,6 +184,7 @@ body {
 .logo--footer {
     color: #FF5E49;
 }
+
 
 /* Header content */
 
@@ -527,3 +532,149 @@ body {
     position: relative;
     top: 1px;
 }
+
+/* Menu Icon */
+
+.menu-icon-wrapper {
+	--time: 0.1s;
+	--width: 40px;
+	--height: 30px;
+	--line-height: 4px;
+	--color: #fff;
+
+	height: var(--height);
+	width: var(--width);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.menu-icon {
+	position: relative;
+	width: var(--width);
+	height: var(--line-height);
+	background-color: var(--color);
+}
+
+.menu-icon::before,
+.menu-icon::after {
+	content: '';
+	display: block;
+
+	position: absolute;
+	left: 0;
+
+	width: var(--width);
+	height: var(--line-height);
+
+	background-color: var(--color);
+	transition: transform var(--time) ease-in, top var(--time) linear var(--time);
+}
+
+.menu-icon::before {
+	top: calc(var(--line-height) * -2);
+}
+
+.menu-icon::after {
+	top: calc(var(--line-height) * 2);
+}
+
+.menu-icon.menu-icon--active {
+	background-color: transparent;
+}
+
+.menu-icon.menu-icon--active::before,
+.menu-icon.menu-icon--active::after {
+	top: 0;
+	transition: top var(--time) linear, transform var(--time) ease-in var(--time);
+}
+
+.menu-icon.menu-icon--active::before {
+	transform: rotate(45deg);
+}
+
+.menu-icon.menu-icon--active::after {
+	transform: rotate(-45deg);
+}
+
+
+    
+/* Media */
+
+@media (max-width: 1269px) {
+
+    .nav_list {
+        display: none
+    }
+    
+    .nav_login {
+        display: none;
+    }
+    
+    .nav_toggle {
+        display: block;
+    }
+    
+    .no-scroll {
+        overflow-y: hidden;
+    }
+
+    .header_img::before,
+    .header_img::after {
+        display: none;
+    }
+    
+
+    .instructions_slider {
+        width: 600px;
+        flex-shrink: 0;
+    }
+
+    .nav--mobile {
+        position: fixed;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        z-index: 99;
+        flex-direction: column;
+        align-items: center;
+        padding-top: 40px;
+        padding-bottom: 40px;
+        background: #47CDE8;
+    }
+
+    .nav--mobile .logo {
+        font-size: 34px;
+    }
+
+    .nav--mobile .nav_list {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 40px;
+        font-size: 22px;
+    }
+
+    .nav--mobile .nav_list a.active::after,
+    .nav--mobile .nav_list a:hover::after {
+        display: none;
+    }
+
+    .nav--mobile .nav_login {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        row-gap: 40px;
+        font-size: 22px;
+    }
+
+    .nav--mobile .nav_toggle {
+        position: fixed;
+        top: 50px;
+        right: 50px;
+    }
+}
+
+
+
