--- a/widgets/widget_500x250/css_widget/main.css
+++ b/widgets/widget_500x250/css_widget/main.css
@@ -56,18 +56,72 @@ element.style {
     align-items: center;
 }
 
-.subscribe {
-    display: block;
-    margin: -30px 23px 50px;
-    width: 100px;
-    height: 50px;
+/* Checkbox */
+
+.slideThree {
+    width: 80px;
+    height: 26px;
+    background: #333;
+    margin: 20px auto;
+    position: relative;
     border-radius: 50px;
-    font-size: 16px;
-    font-weight: 600;
-    text-align: center;
-    background-color: #FF5E49;
-    color: #fff;
-    cursor: pointer;
+    box-shadow: inset 0px 1px 1px rgba(0, 0, 0, 0.5), 0px 1px 0px rgba(255, 255, 255, 0.2);
+    top: -30px;
+    left: -20px;
+}
+
+.slideThree:after {
+  content: "NO";
+  color: #FF5E49;
+  position: absolute;
+  right: 10px;
+  z-index: 0;
+  font: 12px/26px Arial, sans-serif;
+  font-weight: bold;
+  text-shadow: 1px 1px 0px rgba(255, 255, 255, 0.15);
+}
+
+.slideThree:before {
+  content: "YES";
+  color: #47CDE8;
+  position: absolute;
+  left: 10px;
+  z-index: 0;
+  font: 12px/26px Arial, sans-serif;
+  font-weight: bold;
+}
+
+.slideThree label {
+  display: block;
+  width: 34px;
+  height: 20px;
+  cursor: pointer;
+  position: absolute;
+  top: 3px;
+  left: 3px;
+  z-index: 1;
+  background: #fcfff4;
+  background: linear-gradient(to bottom, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
+  border-radius: 50px;
+  transition: all 0.4s ease;
+  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.slideThree input[type="checkbox"] {
+  visibility: hidden;
+}
+
+.slideThree input[type="checkbox"]:checked + label {
+  left: 43px;
+}
+
+ /* End Checkbox */ 
+
+.checkbox_label {
+    position: absolute;
+    top: 200px;
+    left: 60px;
+    font-weight: 400;
 }
 
 .subscribe:active {
